--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shirt Verkoop Bedrijf</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <header>
+    <div class="container">
+      <h1>Shirt Verkoop Bedrijf</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Dames</a>
+        <a href="#">Heren</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="product">
+      <img src="shirt1.jpg" alt="Mooi Shirt">
+      <h2>Mooi Shirt 1</h2>
+      <p class="price">€19.99</p>
+      <button>Add to Cart</button>
+    </section>
+
+    <section class="product">
+      <img src="shirt2.jpg" alt="Stijlvol Shirt">
+      <h2>Stijlvol Shirt 2</h2>
+      <p class="price">€24.99</p>
+      <button>Add to Cart</button>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Shirt Verkoop Bedrijf. Alle rechten voorbehouden.</p>
+  </footer>
+
+</body>
+</html>
